# fetch_demos

./: README.md
fetch_demos/: CMakeLists.txt  package.xml
fetch_demos_common/: CMakeLists.txt  README.md  nodelet_plugins.xml  package.xml  setup.py
fetch_demos_common/action/: GetObjects.action
fetch_demos_common/config/: fetch_demos_common_clustering.yaml
fetch_demos_common/include/fetch_demos_common/: clustering_node.h  grasp_suggestion_interface.h  perception_clustering.h  shape_extractor.h
fetch_demos_common/launch/: fetch_demos_clustering.launch
fetch_demos_common/scripts/: gripper.py  point_head.py
fetch_demos_common/src/: clustering_node.cpp  grasp_suggestion_interface.cpp  grasp_suggestion_node.cpp  perception_clustering.cpp  shape_extractor.cpp
fetch_demos_common/src/fetch_demos_common/: fetch_api.py  fetch_grasping.py
fetch_grasp_cube_demo/: CMakeLists.txt  package.xml
fetch_grasp_cube_demo/config/: grasp_cube_demo.yaml  perception.yaml
fetch_grasp_cube_demo/launch/: collect_data.launch  grasp_cube_demo.launch  just_grasp_demo.launch
fetch_grasp_cube_demo/src/: collect_data.py  grasp_cube_demo.py  just_grasp_demo.py
